﻿Revision history for {{$dist->name}}

{{$NEXT}}

1.000000 2014-10-10T13:04:03Z 3f54592
 [00 Major - Version Scheme Change]
 - Migrate to using x.yyyzzz (mantissa=6) instead of x.yyyzzzaa (mantissa=8)
 - This may affect hand-operated downstreams
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [01 Major - Toolkit Change]
 - Migrate from using Module::Build to using ExtUtils::MakeMaker as installer toolkit
 - Make test/toolkit "latest" dependencies merely recommendations.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.02001003, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +47 -2 (recommends: -1, suggests: +1 ↑1)
 - test: +2 ↓1 -2 (recommends: +3)

0.02001003 2013-07-26T09:11:29Z
 [Bugfixes]
 - No longer broken on modern Package::Stash's

 [Dependencies::Stats]
 - Dependencies changed since 0.02001002, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +6 (suggests: ↑1)
 - runtime: ↑1
 - test: +1

 [Documentation]
 - Updated copyright year
 - Added README.mkdn

 [Meta]
 - Bug tracker moved to github

 [Packaging]
 - use test_requires (mb 0.4004)

0.02001002 2012-08-11T01:59:03Z
 - Minor Maintenance Release.

 [Dependencies::Stats]
 - Dependencies changed since 0.02001001, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: (suggests: ↑1)
 - test: ↑1

 [Tests]
 - Made tests slightly more detailed in the error condition.

0.02001001 2012-06-08T13:30:28Z
 [00 Important Changes]
 - Code has been purged of stolen chunks of Carp code, and now instead depends on a minimum Carp of v1.22. This is the
   first release of Carp that was packaged on CPAN as a Dual Lifed module, upon which I can rely upon the existance and
   implementation of 'caller_info'. It is hoped this will make bugs smaller and the code easier.

 [Dependencies::Stats]