@@ -1,6 +1,12 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000001
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 1.000000 2014-10-10T13:04:03Z
  [Added / configure recommends]
@@ -34,4 +40,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.01011500 2010-12-19T12:36:06Z
 
 0.01011421 2010-12-19T09:52:17Z
-
