@@ -1,6 +1,13 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures on -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000000, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - test: +1 (recommends: ↑1 ↓1)
 
 1.000000 2014-10-10T13:04:03Z 3f54592
  [00 Major - Version Scheme Change]
@@ -165,4 +172,3 @@
 
 0.01011322 2010-12-18T10:14:03Z
  - First version.
-
